psytest/k8s_yaml/istio_conf/DestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: front
  namespace: psytest
spec:
  host: psytest-front
  subsets:
  - labels:
      label: v1
    name: v1
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
