psytest/k8s_yaml/istio_conf/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: psytest-front
  namespace: psytest
spec:
  gateways:
  - psytest-gateway
  hosts:
  - test.psytest.com
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: psytest-front
        subset: v1 
        port:
          number: 80
